# calc

./: .coverage  README.md  pyproject.toml  pytest.ini
HumanTests/: test_human.py
OneShootTests/: test_oneShoot.py
PlanedTests/: test_multistep.py
calc.egg-info/: PKG-INFO  SOURCES.txt
functions/: calc_class.py
